--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,6 +2,7 @@
   margin: 0 auto;
   z-index: 1;
   position: relative;
+padding: 0 15px;
 }
 .clients__container {
   margin: 0 auto;
@@ -44,6 +45,10 @@
     padding: 25px 30px;
     max-width: 750px;
   }
+  @media screen and (max-width: 543px) {
+    max-width: 543px;
+    height: auto;
+  }
 }
 .clients__baner__content {
   display: flex;
@@ -59,6 +64,11 @@
   max-width: 597px;
   @media screen and (max-width: 750px) {
     max-width: 300px;
+    // margin-bottom: 20px;
+  }
+  @media screen and (max-width: 543px) {
+    max-width: 543px;
+    width: 100%;
     // margin-bottom: 20px;
   }
 }
@@ -87,6 +97,10 @@
     &::before {
       top: -10px;
     }
+    // margin-bottom: 20px;
+  }
+  @media screen and (max-width: 543px) {
+    margin: 0 auto;
     // margin-bottom: 20px;
   }
 }
@@ -126,6 +140,12 @@
    margin-top: 25px;
     // margin-bottom: 20px;
   }
+  @media screen and (max-width: 543px) {
+    // max-width: 543px;
+    width: 100%;
+    overflow: hidden;
+    // margin-bottom: 20px;
+  }
 }
 .clients__item {
   position: relative;
@@ -144,7 +164,16 @@
     top: -19px;
   }
   @media screen and (max-width: 750px) {
-    margin-right: 25pxpx;
+    margin-right: 25px;
+    // margin-bottom: 20px;
+  }
+  @media screen and (max-width: 543px) {
+    // min-width: 50vw;
+    // margin-right: auto;
+    // margin-left: auto;
+    // width: 250px;
+    // max-width: 250px;
+    // overflow-x: scroll;
     // margin-bottom: 20px;
   }
 }
@@ -171,6 +200,9 @@
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
+  @media screen and (max-width: 543px) {
+display: none;    
+  }
 }
 .clients__slide__btn-contain {
   display: flex;
@@ -231,6 +263,9 @@
     flex-direction: row;
     flex-wrap: nowrap;
     // max-width: ;
+    @media screen and (max-width: 543px) {
+      flex-direction: column-reverse;
+    }
 }
 .client_slide_text_content {
     display: flex;
@@ -259,4 +294,47 @@
   to {
     opacity: 1;
   }
+}
+
+.client__btn-contain__mob {
+display: flex;
+// max-width: 300px;
+width: 100%;
+margin: 0 auto;
+}
+.client__btn__mob {
+width: 100px;
+height: 50px;
+margin-right: 10px;
+border-radius: 5px;
+
+border: none;
+&:last-child {
+  margin-right: 0;
+}
+&.bgc1 {
+  background: url('../images/img11.png');
+  background-position: center;
+background-size: cover;
+}
+&.bgc2 {
+  background: url('../images/img21.png');
+  background-position: center;
+background-size: cover;
+}
+&.bgc3 {
+  background: url('../images/img31.png');
+  background-position: center;
+background-size: cover;
+}
+&.bgc4 {
+  background: url('../images/img41.png');
+  background-position: center;
+background-size: cover;
+}
+&.bgc5 {
+  background: url('../images/img51.png');
+  background-position: center;
+background-size: cover;
+}
 }
