--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -126,8 +126,8 @@
 
   color: #000000;
   @media screen and (max-width: 750px) {
-    font-size: 16px;
-    margin-bottom: 20px;
+    font-size: 20px;
+    // margin-bottom: 20px;
   }
 }
 .questions__item__btn {
@@ -166,5 +166,10 @@ color: #6E7681;
   height: 100%;
   width: 100%;
   padding-left: 15px;
+  @media screen and(max-width:543px) {
+    font-size: 16px;
+    padding-left: 0;
+    
+  }
   
 }
