--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,8 +1,8 @@
 .form-section {
   margin: 0 auto;
   background-image: url("../images/form-bg.png");
-  background-size: cover;
-  background-position: center;
+  background-size: contain;
+  background-position: top;
   min-height: 1363px;
   margin-top: -244px;
   z-index: 0;
@@ -13,6 +13,7 @@
   margin: 0 auto;
   max-width: 1500px;
   position: relative;
+  padding: 0 15px;
   
 }
 .bg-balls {
@@ -54,6 +55,9 @@
   letter-spacing: 0.01em;
 
   color: #000000;
+  @media screen and (max-width: 750px) {
+    font-size: 32px;
+  }
 }
 .form__description {
   max-width: 821px;
@@ -70,6 +74,10 @@
   text-align: center;
 
   color: #000000;
+  @media screen and (max-width: 750px) {
+    font-size: 16px;
+    margin-bottom: 50px;
+}
 }
 .form-body {
   margin: 0 auto;
@@ -81,7 +89,9 @@
   border-radius: 11px;
   
   z-index: 15;
-
+  @media screen and (max-width: 750px) {
+    padding: 25px 25px 50px 25px;
+}
 }
 .form {
   margin: 0 auto;
@@ -108,6 +118,10 @@
       /* identical to box height, or 160% */
 
       color: #6e7681;
+      @media screen and (max-width: 750px) {
+        font-size: 16px;
+        
+    }
     }
   }
 }
@@ -135,6 +149,11 @@
     //   left: 0;
     //   opacity: 1;
   }
+  @media screen and (max-width: 543px) {
+    font-size: 16px;
+    margin-bottom: 35px;
+    
+}
 }
 
 //   flex-direction: row-reverse;
@@ -144,6 +163,7 @@
   height: 24px;
   transform: translateX(-100%);
   // position: relative;
+  
 }
 .form__recapcha {
   font-style: normal;
@@ -154,6 +174,10 @@
   align-items: flex-start;
   position: relative;
   color: #404751;
+  @media screen and (max-width: 543px) {
+    font-size: 16px;
+    
+}
   & > span {
     display: flexbox;
     margin-left: 17px;
@@ -161,6 +185,10 @@
     height: 25px;
 
     content: url("../images/recap.svg");
+    @media screen and (max-width: 543px) {
+      margin-left: 7px;
+      
+  }
   }
   &::before {
     display: block;
@@ -172,6 +200,11 @@
     border: 1px solid;
     // z-index: ;
     content: "";
+    @media screen and (max-width: 543px) {
+      width: 25px;
+      height: 25px;
+      left: -40px;
+  }
   }
 }
 #notRobot {
@@ -182,8 +215,14 @@
   cursor: pointer;
   z-index: 10;
   opacity: 0;
+  @media screen and (max-width: 543px) {
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+    
+}
   &:checked + .form__recapcha::before {
-    content: url('/images/formpointer.svg');
+    content: url('../images/formpointer.svg');
     fill: #47BAFB;
   }
 }
@@ -216,4 +255,10 @@
   text-align: center;
 
   color: #ffffff;
+  @media screen and (max-width: 750px) {
+    font-size: 16px;
+    width: 100px;
+    height: 50px;
+    
+}
 }
