--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -140,6 +140,10 @@ position: -webkit-sticky;
   background-size: contain;
   transform: rotate(45deg);
   border: none;
+  @media screen and (min-width: 544px) {
+    display: none;
+    
+  }
   // content: url('../images/iconbut.svg')
 }
 .service__content__list {
