--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,7 @@
 @import '../sass/components/img-animate';
 @import '../sass/components/clients';
 @import '../sass/components/form';
-// @import '../sass/components/modal';
+@import '../sass/utils/locomotive-scroll';
 // @import '../sass/components/occupation';
 // @import '../sass/components/team';
 // @import '../sass/components/client';
