--- a/sass/components/_competitors.scss
+++ b/sass/components/_competitors.scss
@@ -5,6 +5,8 @@
   position: relative;
   padding-left: 15px;
   padding-right: 15px;
+  // background-color: #ffffff;
+  // margin-bottom: -200px;
   @media screen and (max-width: 750px) {
     padding-top: 167px;
     padding-bottom: 150px;
@@ -37,7 +39,7 @@
   background: radial-gradient(circle at top left, #4a42ec 0%, #521d91 100%);
   background-color: #521d91;
   background-size: cover;
-  // z-index: 1;
+  z-index: 1;
   // position: relative;
   // filter: drop-shadow(0px 55px 100px rgba(0, 0, 0, 0.25));
   border-radius: 11px;
@@ -49,27 +51,28 @@
 }
 .bg-poli {
   content: url("../images/Polygon.png");
-  width: 46vw;
-  height: 46vw;
+  width: 780px;
+  height: 780px;
   position: absolute;
   z-index: -1000 !important;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  left: -10vw;
-  top: -10vw;
+  left: -312px;
+  top: -270px;
+  transform: rotate(8.39deg);
 }
 .bg-ball__ban {
   content: url("../images/bg-ball1.png");
-  width: 27vw;
-  height: 27vw;
+  width: 525px;
+  height: 520px;
   position: absolute;
   z-index: -1000 !important;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  right: -10vw;
-  bottom: -10vw;
+  right: -161px;
+  bottom: -234px;
   @media screen and (max-width: 750px) {
     width: 300px;
     height: 300px;
@@ -80,13 +83,13 @@
   }
 }
 .banner__overlay {
-  position: fixed;
+  position: fixed !important;
   left: 0;
   top: 0;
   width: 200vw;
   height: 200vw;
   background-color: #5738c7c4;
-  z-index: -5;
+  z-index: 0;
   opacity: 0;
   pointer-events: none;
   transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -119,7 +122,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 36px;
-  line-height: 110%;
+  line-height: 1.1;
   margin: 34px auto 35px auto;
   /* or 40px */
   max-width: 800px;
@@ -142,7 +145,7 @@
   margin: 0 auto;
   display: flex;
   width: 226px;
-
+padding: 0;
   height: 63px;
   font-style: normal;
   font-weight: 500;
