--- a/sass/components/_description.scss
+++ b/sass/components/_description.scss
@@ -2,6 +2,9 @@
   margin: 0 auto;
   padding-top: 200px;
   width: 100%;
+  position: relative;
+  // margin-bottom: -350px;
+  // background-color: #ffffff;
   // overflow-x: hidden;
   @media screen and (max-width: 750px) {
     padding: 350;
@@ -12,24 +15,30 @@
   }
 }
 .layer__bg-img {
-  position: relative;
-  margin-top: 280px;
-// top: 200px;
+  // position: absolute;
+  background-color: #ffffff;
+  padding-bottom:200px;
+  // margin-top: 280px;
+// bottom: -300px;
 // left: 50%;
 // transform: translateX(-50%);
 background: url('../images/layer__bg-img.png');
 background-size: cover;
 background-position: top;
 width: 100vw;
-height: 20vh;
-
-display: flex;
+height: 600px;
+// padding-top: 20vh;
+// display: flex;
 margin: 0;
 padding: 0;
-z-index: -1;
+z-index: 1;
+// padding-bottom: 400px;
+// margin-bottom: -300px;
 }
 .desc-bg {
-  margin: 0 auto;
+  // padding-top: 700px;
+  margin: -1px auto 0 auto;
+  
   // padding: 0 15px;
   width: 100%;
   background-color: #ffffff;
