--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
   margin: 0 auto;
   margin-top: -100px;
+  // background-color: #ffffff;
 }
 // .footer__title {
 //   font-style: normal;
