--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -7,9 +7,9 @@
 .page-header__container {
   margin: 0 auto;
   // overflow: hidden;
-  // max-width: 1920px;
+  max-width: 100vw;
   height: 707px;
-  background-image: url("../images/headbbgimg.png");
+  background-image: url("../images/header-bg.svg");
   background-size: cover;
   background-position: center;
   position: fixed;
